Modified Markdown files under the directory `docs/`.
- Modified Markdown files under the directory `docs/`.

--- a/docs/09_我们的白宫就在黑人的哈莱姆.md
+++ b/docs/09_我们的白宫就在黑人的哈莱姆.md
@@ -2,7 +2,8 @@
 
 > 1984年10月3日，在哈莱姆的集会讲话
 
-在访问纽约期间，桑卡拉在哈莱姆的Harriet Tubman学校对500多人的集会发表了讲话。这场集会由巴特里斯·卢蒙巴联盟组织。
+在访问纽约期间，桑卡拉在哈莱姆的Harriet Tubman学校对500多人的集会发表了讲话。
+这场集会由巴特里斯·卢蒙巴联盟组织。
 
 帝国主义!
 
