--- a/docs/17_关于书籍与阅读.md
+++ b/docs/17_关于书籍与阅读.md
@@ -7,7 +7,7 @@
 
 **《青年非洲》：**     您最近来到法国参加了关于树木和森林的席尔瓦会议，会上提出了沙漠化问题——一个您国家非常关心的问题。您读过关于这个主题的书吗？
 
-**托马斯·桑卡拉：（** 微笑 **)** 没有，它们太枯燥了。
+**托马斯·桑卡拉：（** 微笑 **）** 没有，它们太枯燥了。
 
 **《青年非洲》：** 您读的最后一本书是什么？
 
@@ -47,7 +47,7 @@
 
 **《青年非洲》：** 除了官方讲话，您自己写作吗？
 
-**桑卡拉：** 是的，我写了很长时间了，从1966年开始，那时我还上高中。我每天晚上都写。从1982年开始，我中断了一小段时间。但从那以后我又开始写了。我写下我的想法。 
+**桑卡拉：** 是的，我写了很长时间了，从1966年开始，那时我还上高中。我每天晚上都写。从1982年开始，我中断了一小段时间。但从那以后我又开始写了。我写下我的想法。
 
 **《青年非洲》：** 您打算出版它们吗？
 
@@ -73,7 +73,7 @@
 
 **桑卡拉：** 是的，我不喜欢这种描述人的方式。在非洲文学中，真正说话的并不是黑人。你会觉得你在和那些不惜一切代价想说法语的黑人打交道。这让我很困扰。作家们应该像我们今天说话那样写作。
 
-**《青年非洲》：** 您希望他们说结合本地话的法语吗？ 
+**《青年非洲》：** 您希望他们说结合本地话的法语吗？
 
 **桑卡拉：** 在某种程度上，我更喜欢那样。无论如何，我更喜欢那些处理具体问题的非洲作家，即使我不同意他们的立场。我不喜欢那些为了文学效果而写作的人。
 
